--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <button class="btn-cart" type="button">Корзина</button>
+        </header>
+    </div>
+    <div class="container">
+        <main>
+            <div class="products"></div>
+        </main>
+    </div>
 
+    <script src="js/main.js"></script>
 </body>
 
 </html>
