--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <button class="btn-cart" type="button">Корзина</button>
-        </header>
-    </div>
-    <div class="container">
-        <main>
-            <div class="products"></div>
-        </main>
-    </div>
+
+    <header>
+        <div class="logo">E-shop</div>
+        <button class="btn-cart" type="button">Корзина</button>
+    </header>
+    <main>
+        <div class="products">
+
+        </div>
+    </main>
+
 
     <script src="js/main.js"></script>
 </body>
