--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
 
     <header>
         <div class="logo">E-shop</div>
-        <button class="btn-cart" type="button">Корзина</button>
+        <div class="cart">
+            <form action="#" class="search-form">
+                <input type="text" class="search-field">
+                <button class="btn-search" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+            <button class="btn-cart" type="button">Корзина</button>
+            <div class="cart-block invisible"></div>
+        </div>
     </header>
     <main>
         <div class="products">
 
         </div>
+        <div class="cart-list">
+
+        </div>
     </main>
 
-
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 
