--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         </div>
     </header>
     <main>
-        <div class="products">
+        <div id="products" class="products">
 
         </div>
         <div class="cart-list">
